mongodb/6.2/modules/ROOT/pages/mongodb-connector-studio.adoc
= Using Anypoint Studio to Configure MongoDB Connector 6.2 - Mule 4

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure an input source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.


If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:mongodb-connector-reference.adoc[MongoDB Connector Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add <connector name> to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `mongodb` in the search field.
. Click *MongoDB* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure an Input Source for the Connector

Configure an input source for the connector, such as the Object Listener operation, HTTP Listener, or Scheduler. The Object Listener operation polls the given MongoDB collection for new documents that apply to the filter and invokes your app when it finds one.

For example, to configure `HTTP Listener`, follow these steps:

. In the *Mule Palette* view, select *HTTP* > *Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (+) next to the *Connector configuration* field to configure a global element that can be used by all instances of `HTTP Listener` in the app.
. On the *General* tab, specify connection information.
. On the *TLS* tab, optionally specify TLS information.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specific server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform.

To add an operation for MongoDB, follow these steps:

. In the *Mule Palette* view, select *MongoDB* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the input source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials the connector uses to access the target MongoDB system.

To configure the global element for MongoDB Connector, follow these steps:

. On the *Global Elements* tab, click *Create*.
. Expand *Connector Configuration* and search for `MongoDB config`.
. Click *OK*.
. Enter a value for the following properties:
* *Servers (host:port)*
+
Servers where your MongoDB instance is located, as specified by one or more host:port pairs. The default value is `localhost:27017`. Follow these steps to add one or more host:port instances:
+
.. Select *Edit inline*.
.. Click the green plus sign (+).
.. Add the host:port instance and click *Finish*.
.. Repeat steps 2 and 3 for each host:port instance you want to add.
+
* *Database*
+
Database that sends and retrieves data from the MongoDB instance
+
* *Username*
+
Username to access the MongoDB instance
+
* *Password*
+
Corresponding password

Use the MongoDB configuration with Spring property placeholders for the *Connection* field values when you plan to deploy your application to CloudHub or to Mule runtime engine. You can hard code your connection credentials in the global element properties if you are in the development stage and want to accelerate the development process.

[[configure-other-fields]]
== Global Configuration with SSL (Optional)

MongoDB Connector v6.0.0 and later supports the use of SSL, if your MongoDB instance supports it. To set up the global configuration for SSL, select the *TLS context* field in the *Security* tab in your MongoDB connection.

== Logging

By default, logging is enabled via SLF4J API. The driver uses the following logger names:

* `org.mongodb.driver`, the root logger
** `cluster`, for logs related to monitoring of the MongoDB servers to which the driver connects
** `connection`, for logs related to connections and connection pools
** `protocol`, for logs related to protocol message sent to and received from a MongoDB server
*** `insert`, for logs related to insert messages and responses
*** `update`, for logs related to update messages and responses
*** `delete`, for logs related to delete messages and responses
*** `query`, for logs related to query messages and responses
*** `getmore`, for logs related to getmore messages and responses
*** `killcursor`, for logs related to killcursor messages and responses
*** `command`, for logs related to command messages and responses
** `uri`, for logs related to connection string parsing
** `management`, for logs related to JMX


== Next Steps

After configuring Studio, see the xref:mongodb-connector-examples.adoc[Examples] topic for more configuration ideas.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
